--- a/healthworld/res/layout/favorite_tab_activity.xml
+++ b/healthworld/res/layout/favorite_tab_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <com.tianxia.lib.baseworld.widget.TagCloudView
+        android:id="@+id/tag_cloud_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="10dip"
