--- a/healthworld/res/layout/category_list_activity.xml
+++ b/healthworld/res/layout/category_list_activity.xml
@@ -16,10 +16,6 @@
             android:textSize="22dip"
             android:textColor="#ffffff"/>
     </LinearLayout>
-    <LinearLayout android:id="@+id/AdLinearLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
     <LinearLayout android:id="@+id/app_loading"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -38,10 +34,19 @@
             android:padding="5dip"
             android:textColor="@color/gray_light"/>
     </LinearLayout>
-    <com.tianxia.lib.baseworld.widget.RefreshListView android:id="@+id/infomation_tab_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="@drawable/app_divider_h_gray">
-    </com.tianxia.lib.baseworld.widget.RefreshListView>
+    <RelativeLayout android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <LinearLayout android:id="@+id/AdLinearLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center_horizontal" />
+        <com.tianxia.lib.baseworld.widget.RefreshListView android:id="@+id/infomation_tab_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_above="@id/AdLinearLayout"
+            android:cacheColorHint="#00000000"
+            android:divider="@drawable/app_divider_h_gray">
+        </com.tianxia.lib.baseworld.widget.RefreshListView>
+    </RelativeLayout>
 </LinearLayout>
